# todoapi

./: .gitignore  pyproject.toml  readme.md
todo/: auth.py  config.py  crud.py  database.py  main.py  models.py  permissions.py  schemas.py  tasks.py
todo/tests/: database_config.py  test_auth.py  test_config.py  test_tasks.py  test_tasks_permissions.py
